--- a/helping_harming_model.ipynb
+++ b/helping_harming_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,7 @@
     "import pandas as pd\n",
     "from IPython.display import Image\n",
     "import networkx as nx\n",
-    "from agentpy.tools import make_list\n",
-    "\n",
-    "# For using ggplot from r for better figures \n",
-    "from pyper import *\n",
-    "r = R(RCMD=\"/Library/Frameworks/R.framework/Resources/bin/R\", use_pandas=True)"
+    "from agentpy.tools import make_list"
    ]
   },
   {
@@ -28,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +38,6 @@
     "        # Random starting values. np array m/f rows (index 0/1), immature/adult (0/1) cols\n",
     "        self.genome = np.reshape(np.random.choice(['c','d'],4), (2,2))\n",
     "        self.fitness = 0\n",
-    "        self.num_benefit_received = 0 # How many benefits received in this round\n",
     "        self.alive = True\n",
     "\n",
     "    def set_age_class(self):\n",
@@ -65,7 +60,7 @@
     "        \"\"\" Random uniform mutation of each gene \"\"\"\n",
     "\n",
     "        # Create numpy mask to select each gene to mutate with given probability\n",
-    "        probs = [self.p.mut_prob, 1-self.p.mut_prob]\n",
+    "        probs = [self.p.mut_prob, 1 - self.p.mut_prob]\n",
     "        mask = np.random.choice([True, False], self.genome.shape, p=probs)\n",
     "        # Flip the values for those chosen to mutate\n",
     "        self.genome[mask] = np.where(self.genome=='d', 'c', 'd')[mask]\n",
@@ -77,26 +72,27 @@
     "        col = 0 if self.ageClass == 'immature' else 1 \n",
     "        return self.genome[row,col]\n",
     "\n",
-    "    def social_interaction(self):\n",
-    "        \"\"\" The agent plays the cooperation game with each social partner \"\"\"\n",
-    "        if self.get_active_strategy() == 'c':\n",
-    "            for n in self.network.neighbors(self):\n",
-    "                n.num_benefit_received += 1\n",
-    "        else:\n",
-    "            return\n",
+    "    def calculate_fitness(self, payoff_matrix):\n",
+    "        \"\"\" Calculate and set the agent's fitness \"\"\"\n",
     "\n",
-    "    def calculate_fitness(self):\n",
-    "        \"\"\" Calculate and set the agent's fitness: the mean of its payoffs \"\"\"\n",
+    "        # Get the strategy of our focal individual and convert it to the row (0 - defect, 1 - cooperate)\n",
+    "        payoff_row = int(self.get_active_strategy() == 'c')\n",
+    "        self.fitness = 0\n",
+    "        # Then the agent plays the cooperation game with each social partner\n",
+    "        for n in self.network.neighbors(self):\n",
+    "            # Get the strategy of the neighbour and convert it to the column (0 - defect, 1 - cooperate)\n",
+    "            payoff_col = int(n.get_active_strategy() == 'c')\n",
+    "            # Add the payoff (from the matrix) for playing this individual\n",
+    "            self.fitness += payoff_matrix[payoff_row, payoff_col]\n",
+    "\n",
     "        num_neighbors = sum(1 for _ in self.network.neighbors(self))\n",
-    "        self.fitness = self.p.fitness_baseline  + ((self.p.benefit * self.num_benefit_received) / num_neighbors)\n",
-    "        if self.get_active_strategy() == 'c':\n",
-    "            self.fitness -= self.p.cost\n",
-    "        self.num_benefit_received = 0\n"
+    "        self.fitness /= num_neighbors\n",
+    "        self.fitness += self.p.fitness_baseline\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,6 +112,10 @@
     "        # Define the network in the model and give agents reference to it\n",
     "        self.network = self.pop.network = ap.Network(self, graph)\n",
     "        self.network.add_agents(self.pop, self.network.nodes)\n",
+    "\n",
+    "        # Hawk-dove payoffs\n",
+    "        self.payoff_matrix = np.array([ [(self.p.V-self.p.C)/2.0,  self.p.V], \n",
+    "                                       [ 0.0,                     self.p.V/2.0] ])\n",
     "    \n",
     "    def kill_agent(self, agent_to_kill):\n",
     "        \"\"\" Receives an agent. Removes the agent and node from the network and deletes agent \"\"\"\n",
@@ -174,7 +174,7 @@
     "        self.pop.alive = False\n",
     "        # N-1 agents to survive\n",
     "        for _ in range(self.p.N-1):\n",
-    "            # Sum fitnesses (excluding agebnts already selected to survive)\n",
+    "            # Sum fitnesses (excluding agents already selected to survive)\n",
     "            candidate_agents = self.pop.select(self.pop.alive == False)\n",
     "            assert len(candidate_agents) > 0\n",
     "            selected_agent = self.roulette_wheel_select(candidate_agents)\n",
@@ -193,8 +193,7 @@
     "\n",
     "        # No need to shuffle order for this model because fitness updates are synchronous\n",
     "        # self.pop.shuffle().opinion_influence()\n",
-    "        self.pop.social_interaction()\n",
-    "        self.pop.calculate_fitness()\n",
+    "        self.pop.calculate_fitness(self.payoff_matrix)\n",
     "        agent_to_kill = self.select_agent_to_kill()\n",
     "        sex = agent_to_kill[0].sex\n",
     "        self.kill_agent(agent_to_kill[0])\n",
@@ -205,15 +204,14 @@
     "\n",
     "    def end(self):\n",
     "        \"\"\" Termination conditions \"\"\"\n",
-    "        self.pop.social_interaction()\n",
-    "        self.pop.calculate_fitness()\n",
+    "        self.pop.calculate_fitness(self.payoff_matrix)\n",
     "        self.pop.increase_age()\n",
     "        return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,27 +222,17 @@
     "    'w': 28,         # times more likely offspring select mothers' social partner over others\n",
     "    'd': 19.42,      # Mean degree of the social network\n",
     "    'mut_prob': 0.1, # Mutation probability\n",
-    "    'benefit': 1,\n",
-    "    'cost': 0.1,\n",
+    "    'V': 1,\n",
+    "    'C': 2, # 0-3 for Hawk-dove game\n",
     "    'fitness_baseline': 0.2\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Completed: 1000 steps\n",
-      "Run time: 0:00:10.930379\n",
-      "Simulation finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Single run of the model (experiments later)\n",
     "model = MainModel(parameters)\n",
@@ -256,63 +244,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Males\n",
     "sex = 0 # male\n",
-    "immature_cooperators_m = [g[sex,0] for g in model.pop.genome]\n",
-    "adult_cooperators_m = [g[sex,1] for g in model.pop.genome]"
+    "immature_cooperators_m = [g[sex,0] for g in model.pop.genome] # 0 for immature\n",
+    "adult_cooperators_m = [g[sex,1] for g in model.pop.genome]    # 1 for adult"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "57"
-      ]
-     },
-     "execution_count": 200,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "immature_cooperators_m.count('c')"
+    "immature_cooperators_m.count('c') / model.p.N"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "90"
-      ]
-     },
-     "execution_count": 201,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "adult_cooperators_m.count('c')"
+    "adult_cooperators_m.count('c') / model.p.N"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,60 +283,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "90"
-      ]
-     },
-     "execution_count": 203,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "immature_cooperators_f.count('c')"
+    "immature_cooperators_f.count('c') / model.p.N"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 204,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "adult_cooperators_f.count('c')"
+    "adult_cooperators_f.count('c') / model.p.N"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "74.5"
-      ]
-     },
-     "execution_count": 205,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import statistics\n",
     "statistics.median(model.pop.age)"
@@ -385,41 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.8407407407407407, 0.6263157894736843, 0.6263157894736843, 0.45000000000000007, 0.9647058823529411, 0.5166666666666667, 0.7060606060606062, 0.5545454545454546, 0.7, 0.7882352941176471, 0.6545454545454545, 0.8500000000000001, 0.5444444444444444, 0.6789473684210526, 0.7, 0.825, 0.725, 0.9272727272727272, 0.9142857142857144, 0.5705882352941177, 0.7384615384615385, 0.6555555555555556, 0.7000000000000001, 1.2, 0.6263157894736843, 0.6, 0.6263157894736843, 0.8500000000000001, 0.8, 0.7833333333333334, 0.7238095238095239, 0.6294117647058824, 0.8500000000000001, 0.8272727272727273, 0.690909090909091, 0.7333333333333333, 0.6555555555555556, 0.9142857142857144, 0.7714285714285714, 0.6416666666666667, 0.7875, 0.9857142857142858, 0.7470588235294119, 0.5705882352941177, 0.831578947368421, 0.55, 0.7882352941176471, 0.6238095238095239, 0.5210526315789473, 0.7294117647058824, 0.690909090909091, 0.6652173913043479, 0.6652173913043479, 0.8058823529411766, 0.8400000000000001, 0.7500000000000001, 0.7363636363636364, 0.8666666666666667, 0.8400000000000001, 0.7833333333333334, 0.790909090909091, 0.7666666666666667, 0.8647058823529411, 0.8111111111111111, 0.9222222222222223, 0.7, 0.4125, 0.6, 0.6555555555555556, 0.6789473684210526, 0.7521739130434782, 0.7666666666666667, 0.8647058823529411, 0.7882352941176471, 0.7, 0.6, 0.8666666666666667, 0.7666666666666667, 0.8666666666666667, 0.7111111111111111, 0.7, 0.8142857142857144, 0.6714285714285714, 0.48461538461538467, 0.7153846153846154, 0.5375, 0.7263157894736842, 0.65, 0.8875, 0.7454545454545454, 0.6882352941176472, 0.7, 0.9058823529411766, 0.8, 0.7071428571428572, 0.8368421052631579, 0.5529411764705883, 0.7238095238095239, 0.6384615384615385, 0.5545454545454546]"
-      ]
-     },
-     "execution_count": 176,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.pop.fitness # Same individual is being selected to die each time"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,6 +329,13 @@
    "source": [
     "# Stats to come"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
